src/objects/OpportunityTeamMember.object
<CustomObject>
    <fields>
        <fullName>TeamMemberDepartment__c</fullName>
        <defaultValue>$User.Department</defaultValue>
        <description>Requested by Stephane on BAP-2925. This will allow us to historically track which teams are qualifying opportunities, even if a user changes departments.</description>
        <label>Department</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Member_Created_Date__c</fullName>
        <description>Date that the team member was created</description>
        <formula>BLANKVALUE( Team_Member_Override_Date__c ,  DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Member Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Team_Member_Override_Date__c</fullName>
        <description>Populated by Biz Apps team if the team member needs to have a different date. Used when a different opportunity closed than the one that the SDR was associated with</description>
        <inlineHelpText>Populated by Biz Apps team if the team member needs to have a different date. Used when a different opportunity closed than the one that the SDR was associated with</inlineHelpText>
        <label>Team Member Override Date</label>
        <type>Date</type>
    </fields>
</CustomObject>